[gd_scene load_steps=18 format=3 uid="uid://cssy4j1pn854i"]

[ext_resource type="Script" path="res://Enemies/Kapturek.gd" id="1_0uii2"]
[ext_resource type="Texture2D" uid="uid://dl56184bmcq5w" path="res://Assets/Characters/Kapturek.png" id="2_sbgl1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_py67y"]
atlas = ExtResource("2_sbgl1")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkfes"]
atlas = ExtResource("2_sbgl1")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp00a"]
atlas = ExtResource("2_sbgl1")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_006g4"]
atlas = ExtResource("2_sbgl1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohdcn"]
atlas = ExtResource("2_sbgl1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nkgp"]
atlas = ExtResource("2_sbgl1")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6183c"]
atlas = ExtResource("2_sbgl1")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5aag"]
atlas = ExtResource("2_sbgl1")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1rpa"]
atlas = ExtResource("2_sbgl1")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_76846"]
atlas = ExtResource("2_sbgl1")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y738f"]
atlas = ExtResource("2_sbgl1")
region = Rect2(96, 192, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_j8tw4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_py67y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkfes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp00a")
}],
"loop": true,
"name": &"atack",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_006g4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohdcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nkgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6183c")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5aag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1rpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76846")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y738f")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wk2ao"]
radius = 8.0
height = 28.0

[sub_resource type="CircleShape2D" id="CircleShape2D_a0b5j"]
radius = 175.103

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wbfel"]
radius = 8.0
height = 28.0

[node name="Kaputrek" type="CharacterBody2D"]
collision_layer = 2049
collision_mask = 1537
up_direction = Vector2(0, 1)
script = ExtResource("1_0uii2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_j8tw4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, 2)
shape = SubResource("CapsuleShape2D_wk2ao")

[node name="detection_range" type="Area2D" parent="."]
collision_layer = 16384
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_range"]
shape = SubResource("CircleShape2D_a0b5j")

[node name="HurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 1024
collision_mask = 2048
monitorable = false

[node name="hurtBoxCollision" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-1, 2)
shape = SubResource("CapsuleShape2D_wbfel")
debug_color = Color(0.992157, 0, 0, 0.419608)

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(8, 0)

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="detection_range" to="." method="_on_detection_range_body_entered"]
[connection signal="body_exited" from="detection_range" to="." method="_on_detection_range_body_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
